name:                lambdazonka
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/lambdazonka#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , amazonka
                     , amazonka-apigateway
                     , amazonka-autoscaling
                     , amazonka-cloudformation
                     , amazonka-cloudfront
                     , amazonka-cloudhsm
                     , amazonka-cloudsearch
                     , amazonka-cloudsearch-domains
                     , amazonka-cloudtrail
                     , amazonka-cloudwatch
                     , amazonka-cloudwatch-logs
                     , amazonka-codecommit
                     , amazonka-codedeploy
                     , amazonka-codepipeline
                     , amazonka-cognito-identity
                     , amazonka-cognito-sync
                     , amazonka-config
                     , amazonka-datapipeline
                     , amazonka-devicefarm
                     , amazonka-directconnect
                     , amazonka-ds
                     , amazonka-dynamodb
                     , amazonka-dynamodb-streams
                     , amazonka-ec2
                     , amazonka-ecs
                     , amazonka-efs
                     , amazonka-elasticache
                     , amazonka-elasticbeanstalk
                     , amazonka-elasticsearch
                     , amazonka-elastictranscoder
                     , amazonka-elb
                     , amazonka-emr
                     , amazonka-glacier
                     , amazonka-iam
                     , amazonka-importexport
                     , amazonka-inspector
                     , amazonka-iot
                     , amazonka-iot-dataplane
                     , amazonka-kinesis
                     , amazonka-kinesis-firehose
                     , amazonka-kms
                     , amazonka-lambda
                     , amazonka-marketplace-analytics
                     , amazonka-ml
                     , amazonka-opsworks
                     , amazonka-rds
                     , amazonka-redshift
                     , amazonka-route53
                     , amazonka-route53-domains
                     , amazonka-s3
                  -- , amazonka-s3-encryption
                     , amazonka-sdb
                     , amazonka-ses
                     , amazonka-sns
                     , amazonka-sqs
                     , amazonka-ssm
                     , amazonka-storagegateway
                     , amazonka-sts
                     , amazonka-support
                     , amazonka-swf
                     , amazonka-waf
                     , amazonka-workspaces
                     , bytestring
                     , lens
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

executable lambdazonka
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambdazonka
  default-language:    Haskell2010

test-suite lambdazonka-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lambdazonka
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lambdazonka
